--- a/code/particles/Makefile
+++ b/code/particles/Makefile
@@ -36,14 +36,17 @@ serial_srcs=common.cpp serial.cpp grid_hash_set.cpp
 pthreads_srcs=common.cpp pthreads.cpp grid_hash_set.cpp
 openmp_srcs=common.cpp openmp.cpp grid_hash_set.cpp
 mpi_srcs=common.cpp mpi.cpp grid_hash_set.cpp
-
+fastflow_srcs =	common.cpp fastflow.cpp grid_hash_set.cpp fastflow_farming.cpp
 
 # Object file names derived from sources specified above.
 serial_objs=$(addprefix $(bin_dir)/,$(serial_srcs:.cpp=.o))
 pthreads_objs=$(addprefix $(bin_dir)/,$(pthreads_srcs:.cpp=.o))
 openmp_objs=$(addprefix $(bin_dir)/,$(openmp_srcs:.cpp=.o))
 mpi_objs=$(addprefix $(bin_dir)/,$(mpi_srcs:.cpp=.o))
+fastflow_objs=$(addprefix $(bin_dir)/,$(fastflow_srcs:.cpp=.o))
 
+# Executables
+executables = serial pthreads openmp mpi fastflow
 
 ##################################################
 ## Ordinary targets
@@ -52,9 +55,9 @@ mpi_objs=$(addprefix $(bin_dir)/,$(mpi_srcs:.cpp=.o))
 # Targets that does not generate a file named same as the target itself.
 .PHONY: all clean 
 
-all: serial pthreads openmp mpi
+all: $(executables)
 clean:
-	rm -f $(bin_dir)/* serial pthreads openmp mpi
+	rm -f $(bin_dir)/* $(executables)
 $(bin_dir):
 	-mkdir $@
 
@@ -66,6 +69,8 @@ openmp: $(bin_dir) $(openmp_objs)
 	$(CXX) $(LDFLAGS) $(filter %.o, $^) -o $@ -fopenmp
 mpi: $(bin_dir) $(mpi_objs)
 	$(MPCC) $(LDFLAGS) $(filter %.o, $^) -o $@
+fastflow: $(bin_dir) $(fastflow_objs)
+	$(CXX) $(LDFLAGS) $(filter %.o, $^) -o $@ -lpthread
 
 $(bin_dir)/mpi.o: mpi.cpp
 	$(MPCC) -c $(CFLAGS) $(all_cxxflags) $< -o $@
